# HitchOpen-THICV-Stack

./: .gitignore  README.md
.marscode/: deviceInfo.json
src/common/competition_timer/: CMakeLists.txt  README.md  package.xml
src/common/race_msgs/: CMakeLists.txt  README.md  package.xml
src/common/race_steering/: CMakeLists.txt  package.xml
src/control/go2_control/: CMakeLists.txt  package.xml
src/control/go2_control/scripts/: generate_nmpc_solver.py
src/control/go2_control/src/: atc_dual_axis_tracker.cpp  dual_axis_tracker.cpp  sim_vehicle_model.cpp  test_casadi.cpp  test_qp.cpp  test_qp_mpc.cpp  test_tracking.cpp  test_tracking_MB.cpp  test_tracking_dist.cpp  test_tracking_simple_dist.cpp  test_tracking_simple_dist_opt.cpp  test_tracking_suboptimal.cpp  test_tracking_warmstart.cpp
src/control/race_tracker/: AI_Prompt.md  CMakeLists.txt  package.xml  race_tracker_plugins.xml
src/control/race_tracker/config/: anti_rollover_controller.yaml  const_controller_truck.yaml  eso_tracker.yaml  eso_tracker2.yaml  excel_controller.yaml  excel_controller_pix.yaml  excel_controller_truck.yaml  lat_nmpc_accel_const_truck.yaml  lat_nmpc_excel_truck.yaml  lat_pid_truck.yaml  lat_pure_pursuit_truck.yaml  long_const_throttle_truck.yaml  nmpc_params.yaml  nmpc_params_carla.yaml  pid_params.yaml  simple_tracker.yaml  simple_tracker_pix2.yaml  simple_tracker_truck.yaml
src/control/race_tracker/config/legacy/: excel_controller.yaml  nmpc_params.yaml  simple_tracker.yaml  simple_tracker_truck.yaml
src/control/race_tracker/include/race_tracker/: anti_rollover_controller.h  const_throttle_controller.h  controller_plugin_base.h  eso_tracker.h  eso_tracker2.h  kinematic_controller.h  nmpc_accel_const_controller.h  nmpc_controller.h  nmpc_lateral_controller.h  pid_controller.h  pid_tracker.h  pure_pursuit_controller.h
src/control/race_tracker/launch/: accel_const_controller_truck.launch  anti_rollover_controller_carla.launch  const_throttle_controller_truck.launch  controller.launch  eso_tracker2_carla.launch  eso_tracker_carla.launch  excel_controller_carla.launch  excel_controller_pix.launch  excel_controller_truck.launch  nmpc_dual_axis_control_carla.launch  pid_controller.launch  pid_controller_truck.launch  simple_controller_carla.launch  simple_controller_pix2.launch  simple_controller_truck.launch
src/control/race_tracker/launch/legacy/: nmpc_dual_axis_control_carla.launch
src/control/race_tracker/plugins/: anti_rollover_controller.cpp  const_throttle_controller.cpp  eso_tracker.cpp  eso_tracker2.cpp  nmpc_accel_const_controller.cpp  nmpc_controller.cpp  nmpc_lateral_controller.cpp  pid_controller.cpp  pid_tracker.cpp  pure_pursuit_controller.cpp
src/control/race_tracker/src/: controller_manager.cpp  curvature.cpp
src/control/system_ident/: CMakeLists.txt  README.md  package.xml
src/control/tracking_pkg/: CMakeLists.txt  package.xml
src/control/tracking_pkg/scripts/: ACC_LUYAO.py  ACC_MPC_tracking_node.py  ACC_Target_Detector_node.py  ACC_pid_tracking_node.py  ACC_ref_speed_planner.py  ACC_tracking_node.py  CMakeLists.txt  MB_CSC_get.cpp  MPC_Controller_osqp_Ycons.py  MPC_Controller_qpOASES_Ycons.cpp  MPC_LTR_tracking_node.py  MPC_test.py  MPC_tracking_node.py  PathGenLib.py  TrailorTruck_5DOF_SP.py  c2d_zoh.py  code_tester.py  direct_correction.py  getParam_SP.py  ltr_ref_path_pub_node.py  mayao_node.py  outside_LTR_ref_path_pub_node.py  outside_MPC_LTR_tracking_node.py  outside_MPC_LTR_tracking_node_copy.py  outside_MPC_tracking_node.py  outside_ref_path_pub_node.py  outside_tracking_node.py  path_tunning.py  read_csv.py  ref_path_pub_node.py  tcp_data_logger.py  tracking_node.py  truck_data_logger.py
src/implementation/Pix_molde/: CMakeLists.txt  package.xml
src/implementation/exp_utils/: CMakeLists.txt  README.md  package.xml
src/implementation/frp-connect/: frpc.toml  install_frpc_service.sh  run.sh  test.toml
src/implementation/pix_driver/: CMakeLists.txt
src/implementation/pix_driver/msg/: ChassisOdoFb.msg  SteerStatusFb.msg  VehicleFltStatusFb.msg  VehicleStatusFb.msg  WorkStatusFb.msg
src/implementation/pix_driver/src/: can_bridge.cpp
src/implementation/pix_driver/src/test/: test_client.py  test_intel.cpp
src/implementation/pix_model/: CMakeLists.txt  package.xml
src/implementation/pix_race_bridge/: CMakeLists.txt  package.xml
src/implementation/race_connector/: CMakeLists.txt  package.xml
src/implementation/roadsem/src/auto_robot/msgs/automotive_msgs/: CMakeLists.txt
src/implementation/roadsem/src/auto_robot/msgs/automotive_msgs/msg/: BackToChargeTask.msg  ChargeControlSetting.msg  DeviceStatus.msg  LaserObsDist.msg  MappingInfo.msg  RelayControl.msg  ResPCD2PGM.msg  SaveMap.msg  SceneInfo.msg  SceneSet.msg  SystemInfo.msg
src/implementation/roadsem/src/auto_robot/msgs/automotive_msgs/srv/: GridMapGen.srv
src/implementation/truck_driver/: CMakeLists.txt  package.xml
src/implementation/vel_pkg/: CMakeLists.txt  package.xml
src/launch/carla_race_bridge/: CMakeLists.txt  package.xml
src/launch/pix_racing/: CMakeLists.txt  package.xml
src/launch/simple_racing/: CMakeLists.txt  package.xml
src/localization/gnss_pkg/: CMakeLists.txt  package.xml
src/localization/liorf_localization/: CMakeLists.txt  CMakeLists_back.txt  start_ouster.md
src/mapping/A-LOAM/: CMakeLists.txt
src/mapping/LVI-SAM/: CMakeLists.txt
src/mapping/loam_velodyne/: CMakeLists.txt
src/mapping/lviorf/: CMakeLists.txt
src/planning/race_global_static_planner/: AI_Prompt.md  CMakeLists.txt  package.xml
src/planning/race_munchen_global_planner/: 慕尼黑工大方案仓库安装方法.txt
tutorial/create_msgs/: tutorial_create_msgs_package.md
tutorial/define_packages/: create_new_package.md
tutorial/design_controller/: design_2_axis_steering_nmpc.md
tutorial/github_operation/: link_to_new_repo.md
tutorial/install_carla/: Linux安装Carla编译版教程-小晶.docx
tutorial/install_casadi_with_ipopt/: install_casadi_with_ipopt.md
tutorial/install_liosam/: 【完全体】Ubuntu20.04 ROS1noetic安装LIO_SAM等SLAM包流程.docx
tutorial/use_foxglove/: foxglove_usage_in_race.md
(+420 files in other folders)
